--- a/src/resources/views/partials/tmpcart.hbs
+++ b/src/resources/views/partials/tmpcart.hbs
@@ -16,6 +16,11 @@
           >
             {{this.Gia}}đ
           </p>
+          <button type="button" class="delete-btn ml-2 text-gray-400 hover:text-red-500 transition-colors duration-150 focus:outline-none"
+            onclick="xoaSanPham(this)" aria-label="Xóa sản phẩm"
+            title="Xóa sản phẩm">
+            <i class="fas fa-trash"></i>
+          </button>
         </div>
 
         <div class="flex items-center space-x-2">
