--- a/src/resources/views/admin/account.hbs
+++ b/src/resources/views/admin/account.hbs
@@ -14,7 +14,7 @@
             <div>
                 <a href="/admin/account"><button class="reset-btn">Làm Mới</button></a>
                 {{#if (or (includes action "create") (includes action "all"))}}
-                <a href="/admin/account/create"><button class="add-account">Thêm Nhân Viên</button></a>
+                <a href="/admin/account/create"><button class="add-account">Thêm Tài Khoản</button></a>
                 {{/if}}
             </div>
         </div>
