--- a/src/resources/views/layouts/main.hbs
+++ b/src/resources/views/layouts/main.hbs
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="/css/pdDetail.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;600&family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+      {{{_blocks.css}}}
 <style>
   html, body {
   overflow-x: visible;
@@ -84,6 +85,7 @@
 
 
 </script>
+    {{{_blocks.js}}}
 <script src="/js/site.js"></script>
 
  <script src="/js/layout.js"></script>
