--- a/src/resources/views/user/pdDetail.hbs
+++ b/src/resources/views/user/pdDetail.hbs
@@ -16,6 +16,9 @@
     outline: none;
   }
 </style>
+{{#block "js"}}
+  <script src="/js/home.js"></script>
+{{/block}}
 
 
 
@@ -69,7 +72,7 @@
                 <div>{{this.name}}</div>
               {{/each}}
             </div>
-            <div class="col">{{productDetail.TenTacGia}}</div>
+            <div class="col">{{productDetail.TacGia}}</div>
             <div class="col">{{productDetail.TenNXB}}</div>
           </div>
         </div>
@@ -92,8 +95,8 @@
           <button class="btn btn-danger btn-lg rounded-pill px-4">
             <i class="bi bi-lightning-charge"></i> Mua ngay
           </button>
-          <button class="btn btn-outline-primary btn-lg rounded-pill px-4">
-            <i class="bi bi-cart-plus"></i> Thêm vào giỏ hàng
+          <button class="btn btn-outline-primary btn-lg rounded-pill px-4 icon-add-cart" data-id="{{productDetail.SanPhamID}}">
+            <i class="bi bi-cart-plus" data-id="{{productDetail.SanPhamID}}" ></i> Thêm vào giỏ hàng
           </button>
         </div>
 
@@ -101,8 +104,9 @@
         <div class="custom-tab-box p-4 border rounded">
           <h5 class="fw-bold mb-3">Thông tin chung</h5>
           <ul class="mb-4">
+      
             <li><strong>Tên sách:</strong> {{productDetail.TenSanPham}}</li>
-            <li><strong>Tác giả:</strong> {{productDetail.TenTacGia}}</li>
+            <li><strong>Tác giả:</strong> {{ productDetail.TacGia}}</li>
             <li><strong>Nhà xuất bản:</strong> {{productDetail.TenNXB}}</li>
             <li><strong>Danh mục:</strong>
               {{#each productDetail.DanhMucs}}
@@ -289,8 +293,7 @@
 
 </style>
 <script src="../public/bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
-<script src="/js/home.js"></script>
-<script src=""></script>
+
 <script>
   function changeCustomImage(imageSrc) {
     const activeItem = document.querySelector('#customProductCarousel .carousel-item.active img');
@@ -320,5 +323,40 @@ function changeQuantity(change) {
 }
 
 
+</script>
+
+<script>
+  document.addEventListener('DOMContentLoaded', () => {
+    const addToCartBtn = document.querySelector('.btn-add-to-cart-detail');
+    const buyNowBtn = document.querySelector('.btn-buy-now');
+    const productId = addToCartBtn?.getAttribute('data-id');
+    const isLoggedIn = {{isLoggedIn}}; // lấy từ server render ra
+
+    if (addToCartBtn) {
+      addToCartBtn.addEventListener('click', (e) => {
+        e.preventDefault();
+        if (isLoggedIn) {
+          addToCart(productId);
+          alert("Sản phẩm đã được thêm vào giỏ hàng!");
+        } else {
+          alert("Vui lòng đăng nhập để thêm sản phẩm vào giỏ hàng!");
+          window.location.href = "/user/account";
+        }
+      });
+    }
+
+    if (buyNowBtn) {
+      buyNowBtn.addEventListener('click', (e) => {
+        e.preventDefault();
+        if (isLoggedIn) {
+          addToCart(productId);
+          window.location.href = "/cart"; // Chuyển tới giỏ hàng luôn
+        } else {
+          alert("Vui lòng đăng nhập để mua hàng!");
+          window.location.href = "/user/account";
+        }
+      });
+    }
+  });
 </script>
 
