sửa cập nhật trạng thái order

--- a/src/resources/views/sales/orders/show.hbs
+++ b/src/resources/views/sales/orders/show.hbs
@@ -10,26 +10,11 @@
 
 
   <div class="main-content">
-    <!-- nav bar -->
-    {{!-- <div class="navbar">
-      <div class="navbar-toggle">
-        {{! <i class="fas fa-bars"></i> }}
-      </div>
-      <div class="search-box">
-        <label>
-          <input type="text" placeholder="Tìm Kiếm" />
-          <i class="fas fa-search"></i>
-        </label>
-      </div>
-      <div class="user-profile">
-        <a href="#"><img src="/img/user.jpg" /></a>
-      </div>
-    </div> --}}
-
     <!-- Nội dung quản lý đơn hàng -->
     <div class="order-content">
       <div class="order-header">
         <h2 class="order-title">Hóa đơn xuất</h2>
+        {{!-- lọc đơn hàng --}}
         <div class="order-filters">
           <form class="filter-form">
             <div class="filter-group">
