--- a/src/resources/views/admin/update_account.hbs
+++ b/src/resources/views/admin/update_account.hbs
@@ -20,7 +20,7 @@
                 value="{{account.employee_info}}"
                 autocomplete="off"
                 placeholder="Nhập id hoặc tên nhân viên ..."
-                required
+                readonly
                 />
                 <div id="suggestions_employee"></div>
             </div>
