--- a/src/resources/views/warehouse/provider.hbs
+++ b/src/resources/views/warehouse/provider.hbs
@@ -49,7 +49,7 @@
         </div>
       </form>
     </div>
-    <table id="provider_table">
+    <table id="provider_table" class="provider_table">
       <thead>
         <tr id="header-row">
           <td class="sortable">ID<span class="arrow">▲</span></td>
