--- a/src/public/css/warehouse/provider.css
+++ b/src/public/css/warehouse/provider.css
@@ -112,7 +112,7 @@
     font-size: 18px;
     margin-right: 8px;
 }
-.provider-table .inside-table table{
+.provider-table .inside-table .provider_table{
     width: 100%;
     border-collapse: separate; /* Phải dùng separate thay vì collapse */
     border-spacing: 0; /* Loại bỏ khoảng cách giữa các ô */
@@ -123,7 +123,7 @@
 .no-data{
     text-align: center;
 }
-.provider-table .inside-table table tr td{
+.provider-table .inside-table .provider_table tr td{
     padding: 9px 5px;
     text-align: center;
 }
@@ -133,16 +133,16 @@
 .provider-table .inside-table thead tr td:last-child {
     border-top-right-radius: 10px;
 }
-.provider-table .inside-table table thead td{
+.provider-table .inside-table .provider_table thead td{
     font-weight: 600;
     text-align: center;
     background: #003147;
     color: white;
 }
-.provider-table .inside-table table tbody tr td{
+.provider-table .inside-table .provider_table tbody tr td{
     border-bottom: 1px solid rgb(0, 0, 0, 0.2);
 }
-.provider-table .inside-table table tbody tr:last-child td{
+.provider-table .inside-table .provider_table tbody tr:last-child td{
     border-bottom: none;
 }
 .view-btn{
@@ -297,6 +297,30 @@ form {
 }
 .provider-table .inside-table .info-container .info-box b{
     margin: 0 10px 0 0;
+}
+.receipt-label{
+    font-size: 24px;
+    display: flex;
+    justify-content: center;
+    font-weight: 600;
+    margin: 10px 0;
+}
+#provider-list{
+    width: 100%;
+    border-collapse: collapse;
+    margin: 10px 0;
+}
+#provider-list thead tr td{
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+    border: 1px solid #000;
+}
+#provider-list tbody tr td{
+    font-size: 16px;
+    text-align: center;
+    padding: 5px;
+    border: 1px solid #000;
 }
 /* Delete Popup */
 .delete-popup{
