--- a/src/resources/views/warehouse/product.hbs
+++ b/src/resources/views/warehouse/product.hbs
@@ -24,11 +24,11 @@
       </div>
     </div>
     <div style="display: flex">
-      <select name="" id="selection-box">
+      {{!-- <select name="" id="selection-box">
         <option value="">--- Chọn sản phẩm ---</option>
         <option value="/admin/warehouse/product/on_sale">Sản phẩm đang bán</option>
         <option value="/admin/warehouse/product/delete_opt">Sản phẩm đã xóa</option>
-      </select>
+      </select> --}}
       <form
         action="/admin/warehouse/product/search"
         method="get"
