--- a/src/resources/views/warehouse/provider.hbs
+++ b/src/resources/views/warehouse/provider.hbs
@@ -26,12 +26,12 @@
       </div>
     </div>
     <div style="display: flex">
-      <select name="" id="selection-box">
+      {{!-- <select name="" id="selection-box">
         <option value="">--- Chọn nhà cung cấp ---</option>
         <option value="/admin/warehouse/provider/on_cooperate">Nhà cung cấp đang
           hợp tác</option>
         <option value="/admin/warehouse/provider/delete_opt">Nhà cung cấp đã xóa</option>
-      </select>
+      </select> --}}
       <form
         action="/admin/warehouse/provider/search"
         method="get"
