--- a/src/resources/views/warehouse/update_category.hbs
+++ b/src/resources/views/warehouse/update_category.hbs
@@ -29,7 +29,7 @@
           value="{{edit_category.TenDanhMuc}}"
           id="name"
           name="name"
-        />
+          required/>
       </div>
       <button class="add-btn" type="submit">Sửa</button>
     </form>
