--- a/src/resources/views/partials/menuadmin.hbs
+++ b/src/resources/views/partials/menuadmin.hbs
@@ -113,7 +113,7 @@
     {{#if (includes permissions "qlthongkexuat")}}
     <li>
       <a href="/admin/sales/statistic">
-        <span class="icon"><i class="fas fa-chart-bar"></i></span>
+        <span class="icon"><i class="fas fa-chart-line"></i></span>
         <span class="title">Thống Kê Xuất</span>
       </a>
     </li>
