--- a/src/resources/views/partials/menuorders.hbs
+++ b/src/resources/views/partials/menuorders.hbs
@@ -26,7 +26,7 @@
     </li>
     <li>
       <a href="./statistic">
-        <span><i class="fas fa-chart-bar"></i></span>
+        <span><i class="fas fa-chart-line"></i></span>
         <span>Thống Kê</span>
       </a>
     </li>
