--- a/src/resources/views/partials/salesmenu.hbs
+++ b/src/resources/views/partials/salesmenu.hbs
@@ -53,7 +53,7 @@
       <li>
         <a href="/admin/sales/statistic">
           <!-- Liên kết đến statistic -->
-          <span><i class="fas fa-chart-bar"></i></span>
+          <span><i class="fas fa-chart-line"></i></span>
           <span>Thống Kê</span>
         </a>
       </li>
