--- a/src/resources/views/partials/changeInforUser.hbs
+++ b/src/resources/views/partials/changeInforUser.hbs
@@ -31,7 +31,7 @@
                   <a href="#" class="flex items-center gap-2 text-gray-700 hover:text-red-500 transition">
                     <span class="text-[18px]">
                       <a href="/cart" class="text-sm text-pink-500 block bg-gray-50 hover:bg-gray-100 text-gray-800 px-4 py-2 rounded-lg shadow-sm transition">
-                        Đơn hàng của tôi
+                        Giỏ hàng của tôi
                       </a>
                     </span>
                     <br>
