--- a/src/resources/views/user/thanhtoan.hbs
+++ b/src/resources/views/user/thanhtoan.hbs
@@ -77,11 +77,11 @@
           <div class="flex-1">
             <p class="text-gray-800 font-medium leading-snug">{{this.TenSanPham}}</p>
             <div class="mt-2 text-sm text-gray-600">
-              <span class="text-red-600 font-semibold mr-2">{{formatNumber this.Gia}} đ</span>
+              <span class="text-red-600 font-semibold mr-2">{{formatNumber this.Gia}}</span>
             </div>
           </div>
           <div class="w-12 text-center text-gray-800 font-medium text-base">SL: {{this.SoLuong}}</div>
-          <div class="text-right text-orange-500 font-bold text-base w-24">{{formatNumber this.Tong}} đ</div>
+          <div class="text-right text-orange-500 font-bold text-base w-24">{{formatNumber this.Tong}}</div>
         </div>
       {{/each}}
     </div>
