--- a/src/resources/views/sales/orders/detail.hbs
+++ b/src/resources/views/sales/orders/detail.hbs
@@ -46,7 +46,7 @@
         </div>
         <div class="card-body">
           <p><strong>ID khách hàng:</strong> #{{orderDetails.order.ID_KH}}</p>
-          <p><strong>Tên người nnận:</strong>
+          <p><strong>Tên người nhận:</strong>
             {{orderDetails.order.TenNguoiNhan}}</p>
           <p><strong>Điện thoại:
             </strong>{{orderDetails.order.SoDienThoai}}</p>
